add lightbox and lightbox_close with CSS
add characters introduction in lightbox and lightbox_close with CSS

--- a/index.html
+++ b/index.html
@@ -110,5 +110,151 @@
         </ul>
         <p><img src="images/footertext.gif" alt="footertex" width="643" height="27"></p>
     </footer>
+
+
+    <section class="lightbox" id="ace">
+        <h2>Ace detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Ace-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-ace.jpg" alt="ace" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="bartolomeo">
+        <h2>Bartolomeo detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Bartolomeo-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-bartolomeo.jpg" alt="bartolomeo" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="crocodile">
+        <h2>Crocodile detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Crocodile-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-crocodile.jpg" alt="crocodile" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+
+    <section class="lightbox" id="enel">
+        <h2>Enel detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Enel-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-enel.jpg" alt="enel" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="fujitora">
+        <h2>Fujitora detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Fujitora-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-fujitora.jpg" alt="fujitora" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="kid">
+        <h2>Kid detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Kid-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-kid.jpg" alt="kid" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="kuzan">
+        <h2>Kuzan detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Kuzan-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-kuzan.jpg" alt="kuzan" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="law">
+        <h2>Law detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Law-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-law.jpg" alt="law" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="luffy">
+        <h2>Luffy detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Luffy-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-luffy.jpg" alt="luffy" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="sabo">
+        <h2>Sabo detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Sabo-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-sabo.jpg" alt="sabo" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="sanji">
+        <h2>Sanji detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Sanji-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-sanji.jpg" alt="sanji" width="1200" height="831">
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="zoro">
+        <h2>Zoro detail</h2>
+        <a href="" class="lightbox_close">x</a>
+
+        <article>
+            <h3 class="lb_heading hidden">Zoro-One Piece</h3>
+            <p class="lb_text">
+                <img src="images/character-zoro.jpg" alt="zoro" width="1200" height="831">
+            </p>
+        </article>
+    </section>
 </body>
 </html>
